# idcempy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  README_old.md  README_rst.rst  gimnl_unit_test.py  miop_unit_test.py  paper.bib  paper.md  partOLDREADME  setup.cfg  setup.py  zmiopc_unit_test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linter.yml  python-package.yml
data/: EUKnowledge.dta  bp_exact_for_analysis.dta  tobacco_cons.csv
docs/: CONTRIBUTING.md  api.rst  conf.py  contact.rst  gimnl_tutorial.rst  idcempy_tutorial.rst  imnl_tutorial.rst  index.rst  op_tutorial.rst  requirements.txt  ziopcpy_tutorial.rst  zmiopc_tutorial.rst
docs/_build/doctrees/: api.doctree  contact.doctree  environment.pickle  gimnl_tutorial.doctree  imnl_tutorial.doctree  index.doctree  op_tutorial.doctree  ziop_tutorial.doctree  ziopc_tutorial.doctree  ziopcpy_tutorial.doctree  zmiopc_tutorial.doctree
docs/_build/html/: .buildinfo  api.html  contact.html  genindex.html  gimnl_tutorial.html  imnl_tutorial.html  index.html  objects.inv  op_tutorial.html  py-modindex.html  search.html  searchindex.js  ziop_tutorial.html  ziopc_tutorial.html  ziopcpy_tutorial.html  zmiopc_tutorial.html
examples/: GIMNL_Example.py  MIOPC_Example.py  ZiOPC_Example.py  ZiOPC_Test_0722.py  biml_tests.py  gimnl_examples.py  replicationdata.dta
idcempy/: __init__.py  gimnl.py  imnl.py  zmiopc.py
tests/: gimnl_test.py  gimnl_unit_test.py  imnl_test.py  miop_unit_test.py  ziopc_unit_test.py  zmiopc_test.py
zmiopc/: biml.py  biml_tests.py  bimnl.py  ziopc.py
(+13 files in other folders)
