[metadata]
# replace with your username:
name = idcempy
version = 0.0.1
author = Nguyen Huynh, Sergio Bejar, Vineeta Yadav, Bumba Mukherjee
author_email = nguyenhuynh831@gmail.com
description = Inflated Discrete Choice Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hknd23/idcempy
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.7
        Intended Audience :: Science/Research
[options]
packages = find:
python_requires = >=3.7